# gitinsight

./: PROJECT_PLAN.md  README.md  hello.py  main.py  pyproject.toml  start.py
.cursor/rules/: project-plan.mdc  python-standards.mdc
git_analyzer/: __init__.py  git_data.py  main.py
git_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
git_analyzer/views/: __init__.py  author_commits.py  base.py  commit_time.py  recent_commits.py
